--- a/index.html
+++ b/index.html
@@ -1,10 +1,22 @@
 <!DOCTYPE html>
 <html>
+
+<style>
+
+    * {
+    font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
+    font-weight: 400;
+    font-size: 14px;
+    }
+
+</style>
+
 <body>
 
-<h1>My First Heading</h1>
-
-<p>My first paragraph.</p>
+<div style="max-width:616px; margin:112px auto; padding: 0 24px;">
+    <h1>test</h1>
+    <p>tester</p>
+</div>
 
 </body>
 </html>
