--- a/index.html
+++ b/index.html
@@ -4,18 +4,36 @@
 <style>
 
     * {
-    font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
-    font-weight: 400;
-    font-size: 14px;
+        font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
+        font-weight: 400;
+        font-size: 14px;
+        line-height: 22px;
+        color: #323b43;
+    }
+
+    div {
+        max-width: 616px;
+        margin: 112px auto;
+        padding: 0 24px;
+    }
+
+    h1 {
+        font-weight: 700;
+    }
+
+    a {
+        text-decoration: underline;
+        cursor: pointer;
     }
 
 </style>
 
 <body>
 
-<div style="max-width:616px; margin:112px auto; padding: 0 24px;">
-    <h1>test</h1>
-    <p>tester</p>
+<div>
+    <h1>I'm Derek. Here's a list of some things I do:</h1>
+    <p>• design and develop @ <a href="https://samcart.com" target="blank">SamCart</a></p>
+    <p>• design and build <a href="https://halfdollar.co" target="blank">Halfdollar</a></p>
 </div>
 
 </body>
