--- a/index.html
+++ b/index.html
@@ -32,8 +32,14 @@
 
 <div>
     <h1>I'm Derek. Here's a list of some things I do:</h1>
-    <p>• design and develop @ <a href="https://samcart.com" target="blank">SamCart</a></p>
-    <p>• design and build <a href="https://halfdollar.co" target="blank">Halfdollar</a></p>
+    <p>• design and develop @ <a href="https://samcart.com" target="blank" style="color:#1D96F3">SamCart</a></p>
+    <p>• design and build <a href="https://halfdollar.co" target="blank" style="color:#117FFF">Halfdollar</a></p>
+    <p>• serve and play drums @ <a href="http://www.downtownhope.org/" target="blank" style="color:#db753c">Downtown Hope</a></p>
+    <p>• take pictures and post them on <a href="https://unsplash.com/@dmtors" target="blank" style="color:#111111">Unsplash</a></p>
+    <p>• post design expirements on <a href="https://dribbble.com/dmtors" target="blank" style="color:#ea4c89">Dribbble</a></p>
+    <p>• write about my design process on <a href="https://medium.com/@dmtors" target="blank" style="color:#00ab6c">Medium</a></p>
+    <p>• tweet about things that interest me on <a href="https://twitter.com/dmtors" target="blank" style="color:#1da1f2">Twitter</a></p>
+    <p>• document my wife's culinary journey @ <a href="https://www.instagram.com/dudeapprovedfood/" target="blank" style="color:#833ab4">Dude Approved Food</a></p>
 </div>
 
 </body>
