added more projects and more personal info

--- a/index.html
+++ b/index.html
@@ -1,46 +1,77 @@
 <!DOCTYPE html>
 <html>
 
-<style>
-
-    * {
-        font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
-        font-weight: 400;
-        font-size: 14px;
-        line-height: 22px;
-        color: #323b43;
-    }
-
-    div {
-        max-width: 616px;
-        margin: 112px auto;
-        padding: 0 24px;
-    }
-
-    h1 {
-        font-weight: 700;
-    }
-
-    a {
-        text-decoration: underline;
-        cursor: pointer;
-    }
-
-</style>
+<head>
+    <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
+    <link rel="stylesheet" href="styles.css">
+    <title>Derek Mark Torsani</title>
+</head>
 
 <body>
+    <div>
 
-<div>
-    <h1>I'm Derek. Here's a list of some things I do:</h1>
-    <p>• design and develop @ <a href="https://samcart.com" target="blank" style="color:#1D96F3">SamCart</a></p>
-    <p>• design and build <a href="https://halfdollar.co" target="blank" style="color:#117FFF">Halfdollar</a></p>
-    <p>• serve and play drums @ <a href="http://www.downtownhope.org/" target="blank" style="color:#db753c">Downtown Hope</a></p>
-    <p>• take pictures and post them on <a href="https://unsplash.com/@dmtors" target="blank" style="color:#111111">Unsplash</a></p>
-    <p>• post design expirements on <a href="https://dribbble.com/dmtors" target="blank" style="color:#ea4c89">Dribbble</a></p>
-    <p>• write about my design process on <a href="https://medium.com/@dmtors" target="blank" style="color:#00ab6c">Medium</a></p>
-    <p>• tweet about things that interest me on <a href="https://twitter.com/dmtors" target="blank" style="color:#1da1f2">Twitter</a></p>
-    <p>• document my wife's culinary journey @ <a href="https://www.instagram.com/dudeapprovedfood/" target="blank" style="color:#833ab4">Dude Approved Food</a></p>
-</div>
+        <img src="derekmarktorsani.jpg"/>
 
+        <h1>Derek Mark Torsani</h1>
+        </br>
+        <p>I’m a designer, and yes I code. You should do what you want and stop worrying about everyones opinion.</p>
+        </br>
+        <p>Generally I just enjoy making things, like; software, films, stickers, music, photos, granola, and friends.</p>
+        </br>
+        <p>I’m married to a chef, so life is 👌. Together, we seek out the best foodie spots, host an Airbnb, and rescued a pug named Peggy.</p>
+        </br>
+        <p><span><a id="twitter" href="https://twitter.com/dmtors" target="_blank"></a> / <a id="dribbble" href="https://dribbble.com/dmtors" target="_blank"></a> / <a id="codepen" href="https://codepen.io/dmtors/" target="_blank"></a> / <a id="github" href="https://github.com/dmtors" target="_blank"></a> / <a id="medium" href="https://medium.com/@dmtors" target="_blank"></a> / <a id="unsplash" href="https://unsplash.com/@dmtors" target="_blank"></a> / <a id="email" href="mailto:derektorsani@gmail.com" target="_blank"></a></span></p>
+
+        <h1>Projects</h1>
+        </br>
+        <p><a href="https://halfdollar.co" target="_blank">Halfdollar</a>, Founder</p>
+        </br>
+        <!-- <p><a href="http://friendsanonymo.us" target="_blank">Friends Anonymous</a>, Founder</p>
+        </br> -->
+        <!-- <p><a href="http://dmtors.bigcartel.com" target="_blank">Nomad Sticker Pack</a>, Creator</p>
+        </br> -->
+        <p><a href="https://fb.me/goodtruthfilm" target="_blank">Goodtruth</a>, Filmmaker</p>
+        </br>
+        <p><a href="https://soundcloud.com/forthrightmusic" target="_blank">Forthright</a>, Musician</p>
+        </br>
+        <p><a href="https://dribbble.com/dmtors/projects/319430-Daily-UI" target="_blank">Daily UI</a>, Participant</p>
+        </br>
+        <p><a href="https://dribbble.com/dmtors/projects/338960-Looping-Logos" target="_blank">Looping Logos</a>, Animator</p>
+        </br>
+        <!-- <p><a href="http://tempeh.chat" target="_blank">Tempeh</a>, Creator</p>
+        </br> -->
+        <!-- <p><a href="" target="_blank">Keepsake</a>, Designer</p>
+        </br> -->
+        <p><a href="https://unsplash.com/@dmtors" target="_blank">Unsplash</a>, Contributor</p>
+        </br>
+        <p><a href="https://www.instagram.com/dudeapprovedfood" target="_blank">Dude Approved Food</a></p>
+        </br>
+        <p><a href="https://www.instagram.com/thrubinoculars" target="_blank">Thru Binoculars</a></p>
+
+        <h1>Work</h1>
+        </br>
+        <p><a href="https://samcart.com" target="_blank">SamCart</a>, Designer <span>/ Dec 15 - Now</span></p>
+        </br>
+        <p><a href="https://brllnt.co/" target="_blank">Brllnt</a>, Designer <span>/ Jul 15 - Dec 15</span></p>
+        </br>
+        <p><a href="http://sandals.com" target="_blank">Sandals</a>, Multimedia Designer <span>/ Jan 14 - Jul 15</span></p>
+        </br>
+        <p><a href="http://522productions.com" target="_blank">522 Productions</a>, Motion Designer <span>/ Oct 11 - May 13</span></p>
+        </br>
+        <p><a href="http://ktdcreative.com" target="_blank">KTD Creative</a>, Graphic Designer <span>/ May 10 - Aug 10</span></p>
+        </br>
+        <p><a href="http://insidelacrosse.com" target="_blank">Inside Lacrosse Magazine</a>, Graphic Designer <span>/ May 09 - Aug 09</span></p>
+
+        <h1>Education</h1>
+        </br>
+        <p><a href="https://mica.edu" target="_blank">MICA</a>, BFA Graphic Design <span>/ Jan 08 - May 11</span></p>
+
+        <h1>Tools</h1>
+        </br>
+        <p>Sketch, Illustrator, Photoshop, After Effects, Premiere, InDesign, Lightroom, Atom, GitHub, Git, HTML, CSS, Terminal, InVision, Slack, Hangouts</p>
+
+    </div>
 </body>
+
 </html>
