added a new project

--- a/index.html
+++ b/index.html
@@ -30,8 +30,8 @@
         </br>
         <!-- <p><a href="http://friendsanonymo.us" target="_blank">Friends Anonymous</a>, Founder</p>
         </br> -->
-        <!-- <p><a href="http://dmtors.bigcartel.com" target="_blank">Nomad Sticker Pack</a>, Creator</p>
-        </br> -->
+        <p><a href="http://dmtors.bigcartel.com/product/cute-little-nomad-sticker-3-pack" target="_blank">Cute Little Nomad Sticker Pack</a>, Creator</p>
+        </br>
         <p><a href="https://fb.me/goodtruthfilm" target="_blank">Goodtruth</a>, Filmmaker</p>
         </br>
         <p><a href="https://soundcloud.com/forthrightmusic" target="_blank">Forthright</a>, Musician</p>
@@ -42,13 +42,9 @@
         </br>
         <!-- <p><a href="http://tempeh.chat" target="_blank">Tempeh</a>, Creator</p>
         </br> -->
-        <!-- <p><a href="" target="_blank">Keepsake</a>, Designer</p>
+        <!-- <p><a href="http://usememento.com" target="_blank">Memento</a>, Designer</p>
         </br> -->
         <p><a href="https://unsplash.com/@dmtors" target="_blank">Unsplash</a>, Contributor</p>
-        </br>
-        <p><a href="https://www.instagram.com/dudeapprovedfood" target="_blank">Dude Approved Food</a></p>
-        </br>
-        <p><a href="https://www.instagram.com/thrubinoculars" target="_blank">Thru Binoculars</a></p>
 
         <h1>Work</h1>
         </br>
@@ -71,6 +67,12 @@
         <h1>Tools</h1>
         </br>
         <p>Sketch, Illustrator, Photoshop, After Effects, Premiere, InDesign, Lightroom, Atom, GitHub, Git, HTML, CSS, Terminal, InVision, Slack, Hangouts</p>
+
+        <h1>Hobbies</h1>
+        </br>
+        <p><a href="https://www.instagram.com/dudeapprovedfood" target="_blank">Dude Approved Food</a></p>
+        </br>
+        <p><a href="https://www.instagram.com/thrubinoculars" target="_blank">Thru Binoculars</a></p>
 
     </div>
 </body>
