added in smallchat to fa

--- a/friendsanonymous/friendsanonymous.html
+++ b/friendsanonymous/friendsanonymous.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="fa-styles.css">
     <link rel="shortcut icon" href="dmtfavicon.ico" type="image/x-icon">
     <title>FriendsAnonymous</title>
+    <script src="https://embed.small.chat/T5RUHLD4KG5S42M6A1.js" async></script>
     <script src="https://use.typekit.net/crp1ifx.js"></script>
     <script>try{Typekit.load({ async: true });}catch(e){}</script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
