finished friendsanonymous and working on website

--- a/friendsanonymous/friendsanonymous.html
+++ b/friendsanonymous/friendsanonymous.html
@@ -83,7 +83,7 @@
 <section>
     <div class="tools">
         <h1>Anonymous Name Generator</h1>
-        <a class="button large-button primary-button" id="generate-name">Generate New Name</a>
+        <a class="button large-button primary-button" id="generate-name">Generate Your New Name</a>
         <h2>Nice to meet you...</h2>
         <h3 id="new-name"></h3>
     </div>
@@ -92,23 +92,23 @@
 <section>
     <div class="tools">
         <h1>Anonymous Image Library</h1>
-        <a class="button large-button primary-button" href="">Download All</a>
+        <a class="button large-button primary-button" href="https://www.dropbox.com/sh/0fyyufzj6qejgo2/AACoacTAFTUJH9ts6tKq2-NQa?dl=0" target="_blank">Choose Your New Image</a>
         <div>
-            <img src=""/>
-            <img src=""/>
-            <img src=""/>
-            <img src=""/>
-            <img src=""/>
-            <img src=""/>
-            <img src=""/>
-            <img src=""/>
-            <img src=""/>
-            <img src=""/>
-            <img src=""/>
-            <img src=""/>
-            <img src=""/>
-            <img src=""/>
-            <img src=""/>
+            <img src="images/animals/bird.jpg"/>
+            <img src="images/animals/camel.jpg"/>
+            <img src="images/animals/cat.jpg"/>
+            <img src="images/animals/dog.jpg"/>
+            <img src="images/animals/fox.jpg"/>
+            <img src="images/animals/frog.jpg"/>
+            <img src="images/animals/hawk.jpg"/>
+            <img src="images/animals/horse.jpg"/>
+            <img src="images/animals/monkey.jpg"/>
+            <img src="images/animals/pig.jpg"/>
+            <img src="images/animals/rabbit.jpg"/>
+            <img src="images/animals/redpanda.jpg"/>
+            <img src="images/animals/wolf.jpg"/>
+            <img src="images/animals/yak.jpg"/>
+            <img src="images/animals/zebra.jpg"/>
         </div>
     </div>
 </section>
