--- a/friendsanonymous/friendsanonymous.html
+++ b/friendsanonymous/friendsanonymous.html
@@ -143,7 +143,7 @@
     <div class="footer">
         <img src="friendsanonymous-logo-small.svg"/>
         <div>
-            <p><a href="mailto:someone@friendsanonymo.us" target="_blank">Contact Us</a></p>
+            <p><a href="http://derektorsani.com" target="_blank">Made by Derek Torsani</a></p>
         </div>
     </div>
 </section>
