added logos page

--- a/halfdollar.html
+++ b/halfdollar.html
@@ -24,8 +24,8 @@
         </div>
         <div class="nav mobile-hide">
             <a href="http://derektorsani.com">Back Home</a>
-            <a href="friendsanonymous.html">Previous Project</a>
-            <a href="logos.html">Next Project</a>
+            <a href="logos.html">Previous Project</a>
+            <a href="friendsanonymous.html">Next Project</a>
             <a href="#contact">Contact</a>
         </div>
     </div>
