--- a/logos.html
+++ b/logos.html
@@ -38,23 +38,36 @@
                 <svg class="solid-dot" height="8" width="8"><circle cx="4" cy="4" r="4"/></svg>
                 <svg class="pulse-dot" height="8" width="8"><circle cx="4" cy="4" r="4"/></svg>
             </div>
-            <h1>Halfdollar</h1>
-            <h2>Founder &amp; Designer, 2015—Now</h2>
-            <p>Ever since I was a young boy, I remember saving my birthday money. I always wanted cash, so I could store it and organize it. When I was barely two digits old I finally saved up enough to buy a Sega Game Gear with all my own cash. That felt good.</p>
-            <p>Fast-forward to my adulthood, I now have a forgettable amount of bills, a variety of streams of income from my a recurring paycheck to hosting an Airbnb, and even more the need to manage all of these transactions.</p>
-            <p>I began managing a spreadsheet budget after studying a financial management course.</p>
-            <div class="browser">
-                <div class="topbar">
-                    <div class="circle"></div>
-                    <div class="circle"></div>
-                    <div class="circle"></div>
-                </div>
-                <div class="browser-body">
-                    <img src="images/halfdollar-01.png"/>
-                </div>
-            </div>
-            <p>Fast-forward to my adulthood, I now have a forgettable amount of bills, a variety of streams of income from my a recurring paycheck to hosting an Airbnb, and even more the need to manage all of these transactions.</p>
-            <p>I began managing a spreadsheet budget after studying a financial management course.</p>
+            <h1>Logos</h1>
+            <h2>Designer, 2012—Now</h2>
+            <img class="image" src="images/projects/logos/djdro-logo.jpg"/>
+            <p>DJ Dro (Musician)</p>
+            <img class="image" src="images/projects/logos/djjoeyd-logo.jpg"/>
+            <p>DJ Joey D (Musician)</p>
+            <img class="image" src="images/projects/logos/doughnutbar-logo.jpg"/>
+            <p>Doughnut Bar (Restaurant)</p>
+            <img class="image" src="images/projects/logos/downtownhope-logo.jpg"/>
+            <p>Downtown Hope (Church)</p>
+            <img class="image" src="images/projects/logos/giggle-logo.jpg"/>
+            <p>Giggle (Tech Company)</p>
+            <img class="image" src="images/projects/logos/halfdollar-logo.jpg"/>
+            <p>Halfdollar (Tech Company)</p>
+            <img class="image" src="images/projects/logos/massonliang-logo.jpg"/>
+            <p>Masson Liang (Photographer)</p>
+            <img class="image" src="images/projects/logos/matchboxguild-logo.jpg"/>
+            <p>Matchbox Guild (Product)</p>
+            <img class="image" src="images/projects/logos/miamimunches-logo.jpg"/>
+            <p>Miami Munches (Blog)</p>
+            <img class="image" src="images/projects/logos/movntain-logo.jpg"/>
+            <p>Movntain (Film Company)</p>
+            <img class="image" src="images/projects/logos/refsur-logo.jpg"/>
+            <p>Reference Surplus (Collection)</p>
+            <img class="image" src="images/projects/logos/sands-logo.jpg"/>
+            <p>S &amp; S (Concept)</p>
+            <img class="image" src="images/projects/logos/trademade-logo.jpg"/>
+            <p>Trademade (Brand)</p>
+            <img class="image" src="images/projects/logos/whoa-logo.jpg"/>
+            <p>WHOA (Organization)</p>
         </div>
         <div id="contact" class="section contact">
             <div class="pulse">
