--- a/goodtruth.html
+++ b/goodtruth.html
@@ -38,23 +38,42 @@
                 <svg class="solid-dot" height="8" width="8"><circle cx="4" cy="4" r="4"/></svg>
                 <svg class="pulse-dot" height="8" width="8"><circle cx="4" cy="4" r="4"/></svg>
             </div>
-            <h1>Halfdollar</h1>
-            <h2>Founder &amp; Designer, 2015—Now</h2>
-            <p>Ever since I was a young boy, I remember saving my birthday money. I always wanted cash, so I could store it and organize it. When I was barely two digits old I finally saved up enough to buy a Sega Game Gear with all my own cash. That felt good.</p>
-            <p>Fast-forward to my adulthood, I now have a forgettable amount of bills, a variety of streams of income from my a recurring paycheck to hosting an Airbnb, and even more the need to manage all of these transactions.</p>
-            <p>I began managing a spreadsheet budget after studying a financial management course.</p>
-            <div class="browser">
-                <div class="topbar">
-                    <div class="circle"></div>
-                    <div class="circle"></div>
-                    <div class="circle"></div>
-                </div>
-                <div class="browser-body">
-                    <img src="images/halfdollar-01.png"/>
-                </div>
+            <h1>Goodtruth</h1>
+            <h2>Filmmaker, 2012—Now</h2>
+            <p>Detailed writing coming soon!</p>
+            <a href="https://www.facebook.com/goodtruthfilm" target="_blank">https://www.facebook.com/goodtruthfilm</a>
+            <div class="video-container">
+                <iframe src="https://player.vimeo.com/video/121162303" width="640" height="360" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
             </div>
-            <p>Fast-forward to my adulthood, I now have a forgettable amount of bills, a variety of streams of income from my a recurring paycheck to hosting an Airbnb, and even more the need to manage all of these transactions.</p>
-            <p>I began managing a spreadsheet budget after studying a financial management course.</p>
+            <p>Last Month</p>
+            <div class="video-container">
+                <iframe src="https://player.vimeo.com/video/105286597" width="640" height="272" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
+            </div>
+            <p>Sousse</p>
+            <div class="video-container">
+                <iframe src="https://player.vimeo.com/video/105548071" width="640" height="272" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
+            </div>
+            <p>Rose, Bud, Thorn</p>
+            <div class="video-container">
+                <iframe src="https://player.vimeo.com/video/105754823" width="640" height="360" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
+            </div>
+            <p>What Are We?</p>
+            <div class="video-container">
+                <iframe src="https://player.vimeo.com/video/108855709" width="640" height="272" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
+            </div>
+            <p>Masindi</p>
+            <div class="video-container">
+                <iframe src="https://player.vimeo.com/video/147207974" width="640" height="360" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
+            </div>
+            <p>Love One</p>
+            <div class="video-container">
+                <iframe src="https://player.vimeo.com/video/116035344" width="640" height="272" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
+            </div>
+            <p>Portrait No.637</p>
+            <div class="video-container">
+                <iframe src="https://player.vimeo.com/video/114026509" width="640" height="272" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
+            </div>
+            <p>PACE Programme</p>
         </div>
         <div id="contact" class="section contact">
             <div class="pulse">
