--- a/halfdollar.html
+++ b/halfdollar.html
@@ -24,7 +24,7 @@
         </div>
         <div class="nav mobile-hide">
             <a href="http://derektorsani.com">Back Home</a>
-            <a href="logos.html">Previous Project</a>
+            <a href="samcart.html">Previous Project</a>
             <a href="friendsanonymous.html">Next Project</a>
             <a href="#contact">Contact</a>
         </div>
@@ -40,9 +40,10 @@
             </div>
             <h1>Halfdollar</h1>
             <h2>Founder &amp; Designer, 2015—Now</h2>
-            <p>Ever since I was a young boy, I remember saving my birthday money. I always wanted cash, so I could store it and organize it. When I was barely two digits old I finally saved up enough to buy a Sega Game Gear with all my own cash. That felt good.</p>
-            <p>Fast-forward to my adulthood, I now have a forgettable amount of bills, a variety of streams of income from my a recurring paycheck to hosting an Airbnb, and even more the need to manage all of these transactions.</p>
-            <p>I began managing a spreadsheet budget after studying a financial management course.</p>
+            <p>Detailed writing coming soon!</p>
+            <a href="https://halfdollar.co" target="_blank">https://halfdollar.co</a>
+            <img class="image" src="images/projects/halfdollar/hd-sketch1.jpg"/>
+            <img class="image" src="images/projects/halfdollar/hd-sketch2.jpg"/>
             <div class="browser">
                 <div class="topbar">
                     <div class="circle"></div>
@@ -50,11 +51,109 @@
                     <div class="circle"></div>
                 </div>
                 <div class="browser-body">
-                    <img src="images/halfdollar-01.png"/>
+                    <img src="images/projects/halfdollar/hd-01.png"/>
                 </div>
             </div>
-            <p>Fast-forward to my adulthood, I now have a forgettable amount of bills, a variety of streams of income from my a recurring paycheck to hosting an Airbnb, and even more the need to manage all of these transactions.</p>
-            <p>I began managing a spreadsheet budget after studying a financial management course.</p>
+            <div class="browser">
+                <div class="topbar">
+                    <div class="circle"></div>
+                    <div class="circle"></div>
+                    <div class="circle"></div>
+                </div>
+                <div class="browser-body">
+                    <img src="images/projects/halfdollar/hd-02.png"/>
+                </div>
+            </div>
+            <div class="browser">
+                <div class="topbar">
+                    <div class="circle"></div>
+                    <div class="circle"></div>
+                    <div class="circle"></div>
+                </div>
+                <div class="browser-body">
+                    <img src="images/projects/halfdollar/hd-03.png"/>
+                </div>
+            </div>
+            <div class="browser">
+                <div class="topbar">
+                    <div class="circle"></div>
+                    <div class="circle"></div>
+                    <div class="circle"></div>
+                </div>
+                <div class="browser-body">
+                    <img src="images/projects/halfdollar/income@2x.png"/>
+                </div>
+            </div>
+            <div class="browser">
+                <div class="topbar">
+                    <div class="circle"></div>
+                    <div class="circle"></div>
+                    <div class="circle"></div>
+                </div>
+                <div class="browser-body">
+                    <img src="images/projects/halfdollar/income-v2@2x.png"/>
+                </div>
+            </div>
+            <div class="browser">
+                <div class="topbar">
+                    <div class="circle"></div>
+                    <div class="circle"></div>
+                    <div class="circle"></div>
+                </div>
+                <div class="browser-body">
+                    <img src="images/projects/halfdollar/income-v4@2x.png"/>
+                </div>
+            </div>
+            <div class="browser">
+                <div class="topbar">
+                    <div class="circle"></div>
+                    <div class="circle"></div>
+                    <div class="circle"></div>
+                </div>
+                <div class="browser-body">
+                    <img src="images/projects/halfdollar/dashboard@2x.png"/>
+                </div>
+            </div>
+            <div class="browser">
+                <div class="topbar">
+                    <div class="circle"></div>
+                    <div class="circle"></div>
+                    <div class="circle"></div>
+                </div>
+                <div class="browser-body">
+                    <img src="images/projects/halfdollar/outgoing@2x.png"/>
+                </div>
+            </div>
+            <div class="browser">
+                <div class="topbar">
+                    <div class="circle"></div>
+                    <div class="circle"></div>
+                    <div class="circle"></div>
+                </div>
+                <div class="browser-body">
+                    <img src="images/projects/halfdollar/search@2x.png"/>
+                </div>
+            </div>
+            <div class="browser">
+                <div class="topbar">
+                    <div class="circle"></div>
+                    <div class="circle"></div>
+                    <div class="circle"></div>
+                </div>
+                <div class="browser-body">
+                    <img src="images/projects/halfdollar/settings@2x.png"/>
+                </div>
+            </div>
+            <div class="browser">
+                <div class="topbar">
+                    <div class="circle"></div>
+                    <div class="circle"></div>
+                    <div class="circle"></div>
+                </div>
+                <div class="browser-body">
+                    <img src="images/projects/halfdollar/landing@2x.png"/>
+                </div>
+            </div>
         </div>
         <div id="contact" class="section contact">
             <div class="pulse">
