--- a/logos.html
+++ b/logos.html
@@ -25,7 +25,7 @@
         <div class="nav mobile-hide">
             <a href="http://derektorsani.com">Back Home</a>
             <a href="stickerpack.html">Previous Project</a>
-            <a href="halfdollar.html">Next Project</a>
+            <a href="samcart.html">Next Project</a>
             <a href="#contact">Contact</a>
         </div>
     </div>
@@ -40,6 +40,7 @@
             </div>
             <h1>Logos</h1>
             <h2>Designer, 2012—Now</h2>
+            <p>Detailed writing coming soon!</p>
             <img class="image" src="images/projects/logos/djdro-logo.jpg"/>
             <p>DJ Dro (Musician)</p>
             <img class="image" src="images/projects/logos/djjoeyd-logo.jpg"/>
