--- a/memento.html
+++ b/memento.html
@@ -38,23 +38,73 @@
                 <svg class="solid-dot" height="8" width="8"><circle cx="4" cy="4" r="4"/></svg>
                 <svg class="pulse-dot" height="8" width="8"><circle cx="4" cy="4" r="4"/></svg>
             </div>
-            <h1>Halfdollar</h1>
-            <h2>Founder &amp; Designer, 2015—Now</h2>
-            <p>Ever since I was a young boy, I remember saving my birthday money. I always wanted cash, so I could store it and organize it. When I was barely two digits old I finally saved up enough to buy a Sega Game Gear with all my own cash. That felt good.</p>
-            <p>Fast-forward to my adulthood, I now have a forgettable amount of bills, a variety of streams of income from my a recurring paycheck to hosting an Airbnb, and even more the need to manage all of these transactions.</p>
-            <p>I began managing a spreadsheet budget after studying a financial management course.</p>
-            <div class="browser">
-                <div class="topbar">
-                    <div class="circle"></div>
-                    <div class="circle"></div>
-                    <div class="circle"></div>
+            <h1>Memento</h1>
+            <h2>Designer, 2017</h2>
+            <p>Detailed writing coming soon!</p>
+            <img class="image" src="images/projects/memento/home.jpg"/>
+            <img class="image" src="images/projects/memento/inner-folder.jpg"/>
+            <img class="image" src="images/projects/memento/settings.jpg"/>
+            <img class="image" src="images/projects/memento/view.jpg"/>
+            <img class="image" src="images/projects/memento/camera.jpg"/>
+            <img class="image" src="images/projects/memento/addnew1.jpg"/>
+            <img class="image" src="images/projects/memento/addnew2.jpg"/>
+            <div class="phone">
+                <div class="topbar"></div>
+                <div class="phone-body">
+                    <img src="images/projects/memento/001-home.png"/>
                 </div>
-                <div class="browser-body">
-                    <img src="images/halfdollar-01.png"/>
-                </div>
+                <div class="bottombar"></div>
             </div>
-            <p>Fast-forward to my adulthood, I now have a forgettable amount of bills, a variety of streams of income from my a recurring paycheck to hosting an Airbnb, and even more the need to manage all of these transactions.</p>
-            <p>I began managing a spreadsheet budget after studying a financial management course.</p>
+            <div class="phone">
+                <div class="topbar"></div>
+                <div class="phone-body">
+                    <img src="images/projects/memento/002-occasion.png"/>
+                </div>
+                <div class="bottombar"></div>
+            </div>
+            <div class="phone">
+                <div class="topbar"></div>
+                <div class="phone-body">
+                    <img src="images/projects/memento/003-view.png"/>
+                </div>
+                <div class="bottombar"></div>
+            </div>
+            <div class="phone">
+                <div class="topbar"></div>
+                <div class="phone-body">
+                    <img src="images/projects/memento/004-view-expand.png"/>
+                </div>
+                <div class="bottombar"></div>
+            </div>
+            <div class="phone">
+                <div class="topbar"></div>
+                <div class="phone-body">
+                    <img src="images/projects/memento/005-edit.png"/>
+                </div>
+                <div class="bottombar"></div>
+            </div>
+            <div class="phone">
+                <div class="topbar"></div>
+                <div class="phone-body">
+                    <img src="images/projects/memento/006-confirm.png"/>
+                </div>
+                <div class="bottombar"></div>
+            </div>
+            <div class="phone">
+                <div class="topbar"></div>
+                <div class="phone-body">
+                    <img src="images/projects/memento/007-camera.png"/>
+                </div>
+                <div class="bottombar"></div>
+            </div>
+            <div class="phone">
+                <div class="topbar"></div>
+                <div class="phone-body">
+                    <img src="images/projects/memento/008-camera-next.png"/>
+                </div>
+                <div class="bottombar"></div>
+            </div>
+            <img class="image" src="images/projects/memento/user-flow.png"/>
         </div>
         <div id="contact" class="section contact">
             <div class="pulse">
