--- a/dailyui.html
+++ b/dailyui.html
@@ -38,23 +38,22 @@
                 <svg class="solid-dot" height="8" width="8"><circle cx="4" cy="4" r="4"/></svg>
                 <svg class="pulse-dot" height="8" width="8"><circle cx="4" cy="4" r="4"/></svg>
             </div>
-            <h1>Halfdollar</h1>
-            <h2>Founder &amp; Designer, 2015—Now</h2>
-            <p>Ever since I was a young boy, I remember saving my birthday money. I always wanted cash, so I could store it and organize it. When I was barely two digits old I finally saved up enough to buy a Sega Game Gear with all my own cash. That felt good.</p>
-            <p>Fast-forward to my adulthood, I now have a forgettable amount of bills, a variety of streams of income from my a recurring paycheck to hosting an Airbnb, and even more the need to manage all of these transactions.</p>
-            <p>I began managing a spreadsheet budget after studying a financial management course.</p>
-            <div class="browser">
-                <div class="topbar">
-                    <div class="circle"></div>
-                    <div class="circle"></div>
-                    <div class="circle"></div>
-                </div>
-                <div class="browser-body">
-                    <img src="images/halfdollar-01.png"/>
-                </div>
-            </div>
-            <p>Fast-forward to my adulthood, I now have a forgettable amount of bills, a variety of streams of income from my a recurring paycheck to hosting an Airbnb, and even more the need to manage all of these transactions.</p>
-            <p>I began managing a spreadsheet budget after studying a financial management course.</p>
+            <h1>Daily UI</h1>
+            <h2>Participant, 2015—2016</h2>
+            <p>Detailed writing coming soon!</p>
+            <a href="https://dribbble.com/dmtors/projects/319430-Daily-UI" target="_blank">https://dribbble.com/dmtors/projects/319430-Daily-UI</a>
+            <img class="image" src="images/projects/dailyui/dailyui-001.gif"/>
+            <p>001—Sign Up</p>
+            <img class="image" src="images/projects/dailyui/dailyui-076.gif"/>
+            <p>076—Loading (Android Marshmallow Boot Animation)</p>
+            <img class="image" src="images/projects/dailyui/dailyui-049.gif"/>
+            <p>049—Notifications</p>
+            <img class="image" src="images/projects/dailyui/dailyui-042.gif"/>
+            <p>042—ToDo List</p>
+            <img class="image" src="images/projects/dailyui/dailyui-068.gif"/>
+            <p>068—Flight Search</p>
+            <img class="image" src="images/projects/dailyui/dailyui-026.gif"/>
+            <p>026—Subscribe</p>
         </div>
         <div id="contact" class="section contact">
             <div class="pulse">
