--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         </div>
         <div class="nav mobile-hide">
             <a href="#about">About</a>
-            <a href="#projects">Projects</a>
+            <a href="#work">Work</a>
             <a href="#history">History</a>
             <a href="#blog">Blog</a>
             <a href="#influence">Influence</a>
@@ -45,14 +45,30 @@
             <p>I’m also interested in what pure story-telling looks like through still and motion photography, as well as musical composition.</p>
             <p>When I’m not desiging, I’m likely traveling with my wife, finding good food or enjoying silence in nature. Oh and being a doggy dad to our rescue pug, Peggy.</p>
         </div>
-        <div id="projects" class="section projects">
+        <div id="work" class="section projects">
             <div class="pulse">
                 <svg class="solid-dot" height="8" width="8"><circle cx="4" cy="4" r="4"/></svg>
                 <svg class="pulse-dot" height="8" width="8"><circle cx="4" cy="4" r="4"/></svg>
             </div>
-            <h1>Projects</h1>
+            <h1>Work</h1>
             <div class="project-container">
-                <a href="halfdollar.html"><div class="project halfdollar">
+                <a href="samcart.html"><div class="project samcart">
+                    <svg width="56px" viewBox="0 0 99 87.7">
+                        <path d="M13.5,64.4c3.2,0,5.8,2.6,5.8,5.8c0,3.2-2.6,5.8-5.8,5.8c-3.2,0-5.8-2.6-5.8-5.8C7.7,67,10.3,64.4,13.5,64.4"
+                        />
+                        <circle cx="92.8" cy="65.9" r="5.8"/>
+                        <path d="M52.5,76.1c3.2,0,5.8,2.6,5.8,5.8c0,3.2-2.6,5.8-5.8,5.8c-3.2,0-5.8-2.6-5.8-5.8
+                        C46.7,78.7,49.3,76.1,52.5,76.1"/>
+                        <polygon points="53.2,31.6 7.2,18.6 46.1,4.6 55,7.2 54.9,26.6 92.6,13.5 45.8,0 0,16.3 0,21 8,23.9 8,55.9
+                        52.9,69.4 99,51.3 99,15.7 		"/>
+                        <polygon points="50.8,26.7 50.9,10.3 46.2,8.9 20.4,18.1 		"/>
+                    </svg>
+                    <div class="description">
+                        <h2>SamCart</h2>
+                        <h3>Design Lead, 2015–Now</h3>
+                    </div>
+                </div></a>
+                <a href="halfdollar.html" style="margin-right:0;"><div class="project halfdollar">
                     <svg width="64px" height="33px" viewBox="0 0 64 33" version="1.1">
                         <g stroke="none" stroke-width="1" fill="none" fill-rule="evenodd">
                         <g transform="translate(-505.000000, -476.000000)" fill="#088DFF">
@@ -67,7 +83,7 @@
                         <h3>Founder &amp; Designer, 2015–Now</h3>
                     </div>
                 </div></a>
-                <a href="friendsanonymous.html" style="margin-right:0;"><div class="project friends">
+                <a href="friendsanonymous.html"><div class="project friends">
                     <svg width="64px" height="57px" viewBox="0 0 64 57">
                         <g id="home3" stroke="none" stroke-width="1" fill="none" fill-rule="evenodd">
                         <g transform="translate(-792.000000, -489.000000)" fill="#088DFF">
@@ -93,7 +109,7 @@
                         <h3>Maker, 2017</h3>
                     </div>
                 </div></a>
-                <a href="memento.html"><div class="project memento">
+                <a href="memento.html" style="margin-right:0;"><div class="project memento">
                     <svg width="64px" height="28px" viewBox="0 0 64 28">
                         <g stroke="none" stroke-width="1" fill="none" fill-rule="evenodd">
                         <g transform="translate(-480.000000, -840.000000)" fill="#088DFF">
@@ -110,28 +126,28 @@
                         <h3>Designer, 2017</h3>
                     </div>
                 </div></a>
-                <a href="goodtruth.html" style="margin-right:0;"><div class="project goodtruth">
+                <a href="goodtruth.html"><div class="project goodtruth">
                     <div class="image"></div>
                     <div class="description">
                         <h2>Goodtruth</h2>
                         <h3>Filmmaker, 2012–Now</h3>
                     </div>
                 </div></a>
-                <a href="dailyui.html"><div class="project dailyui">
+                <a href="dailyui.html" style="margin-right:0;"><div class="project dailyui">
                     <div class="image"></div>
                     <div class="description">
                         <h2>Daily UI</h2>
                         <h3>Participant, 2015–2016</h3>
                     </div>
                 </div></a>
-                <a href="stickerpack.html" style="margin-right:0;"><div class="project sticker">
+                <a href="stickerpack.html"><div class="project sticker">
                     <div class="image"></div>
                     <div class="description">
                         <h2>Cute Little Sticker Pack</h2>
                         <h3>Maker, 2017</h3>
                     </div>
                 </div></a>
-                <a href="logos.html"><div class="project logos">
+                <a href="logos.html" style="margin-right:0;"><div class="project logos">
                     <div class="image"></div>
                     <div class="description">
                         <h2>Logos</h2>
