--- a/stickerpack.html
+++ b/stickerpack.html
@@ -38,23 +38,22 @@
                 <svg class="solid-dot" height="8" width="8"><circle cx="4" cy="4" r="4"/></svg>
                 <svg class="pulse-dot" height="8" width="8"><circle cx="4" cy="4" r="4"/></svg>
             </div>
-            <h1>Halfdollar</h1>
-            <h2>Founder &amp; Designer, 2015—Now</h2>
-            <p>Ever since I was a young boy, I remember saving my birthday money. I always wanted cash, so I could store it and organize it. When I was barely two digits old I finally saved up enough to buy a Sega Game Gear with all my own cash. That felt good.</p>
-            <p>Fast-forward to my adulthood, I now have a forgettable amount of bills, a variety of streams of income from my a recurring paycheck to hosting an Airbnb, and even more the need to manage all of these transactions.</p>
-            <p>I began managing a spreadsheet budget after studying a financial management course.</p>
-            <div class="browser">
-                <div class="topbar">
-                    <div class="circle"></div>
-                    <div class="circle"></div>
-                    <div class="circle"></div>
-                </div>
-                <div class="browser-body">
-                    <img src="images/halfdollar-01.png"/>
-                </div>
-            </div>
-            <p>Fast-forward to my adulthood, I now have a forgettable amount of bills, a variety of streams of income from my a recurring paycheck to hosting an Airbnb, and even more the need to manage all of these transactions.</p>
-            <p>I began managing a spreadsheet budget after studying a financial management course.</p>
+            <h1>Cute Little Sticker Pack</h1>
+            <h2>Maker, 2017</h2>
+            <p>Detailed writing coming soon!</p>
+            <img class="image" src="images/projects/stickerpack/stickergroup.jpg"/>
+            <a href="http://dmtors.bigcartel.com/product/cute-little-nomad-sticker-3-pack" target="_blank">http://dmtors.bigcartel.com/product/cute-little-nomad-sticker-3-pack</a>
+            </br></br>
+            <p>Who doesn't love stickers? Especially little cute ones.</p>
+            <p>Being a digital nomad is something close to my heart. When I lost my first job out of college due to budget cuts, I thought that was it, I'm doomed. But what that experience did was force me into freelancing full-time.</p>
+            <p>This taught me many time-management, self-starting and -motivating skills. I learned to be intentional with remote communication, otherwise details between myself and my clients would be lost and projects would falal apart.</p>
+            <p>4 years later I decided to make a few stickers paying homage to that time in my life.</p>
+            <img class="image" src="images/projects/stickerpack/homeheart.jpg"/>
+            <p><span>Home Is Where The Heart Is</span></p>
+            <img class="image" src="images/projects/stickerpack/airplane.jpg"/>
+            <p><span>Paper Airplane</span></p>
+            <img class="image" src="images/projects/stickerpack/pencil.jpg"/>
+            <p><span>Creative Bindle</span></p>
         </div>
         <div id="contact" class="section contact">
             <div class="pulse">
