fixed something on fa

--- a/friendsanonymous/friendsanonymous.html
+++ b/friendsanonymous/friendsanonymous.html
@@ -65,7 +65,7 @@
             <a class="button small-button tertiary-button" href="https://join.slack.com/friendsanonymous/shared_invite/MjA2MTUyMjIyOTE1LTE0OTg4MjYxMDctMGU2OTQzZDE5MA" target="_blank">#suicide</a>
             <a class="button small-button tertiary-button" href="https://join.slack.com/friendsanonymous/shared_invite/MjA2MTUyMjIyOTE1LTE0OTg4MjYxMDctMGU2OTQzZDE5MA" target="_blank">#ptsd</a>
             <a class="button small-button tertiary-button" href="https://join.slack.com/friendsanonymous/shared_invite/MjA2MTUyMjIyOTE1LTE0OTg4MjYxMDctMGU2OTQzZDE5MA" target="_blank">#abuse</a>
-            <a class="button small-button tertiary-button" href="https://join.slack.com/friendsanonymous/shared_invite/MjA2MTUyMjIyOTE1LTE0OTg4MjYxMDctMGU2OTQzZDE5MA" target="_blank">#transgender</a>
+            <a class="button small-button tertiary-button" href="https://join.slack.com/friendsanonymous/shared_invite/MjA2MTUyMjIyOTE1LTE0OTg4MjYxMDctMGU2OTQzZDE5MA" target="_blank">#anxiety</a>
             <a class="button small-button tertiary-button" href="https://join.slack.com/friendsanonymous/shared_invite/MjA2MTUyMjIyOTE1LTE0OTg4MjYxMDctMGU2OTQzZDE5MA" target="_blank">#depression</a>
             <a class="button small-button tertiary-button" href="https://join.slack.com/friendsanonymous/shared_invite/MjA2MTUyMjIyOTE1LTE0OTg4MjYxMDctMGU2OTQzZDE5MA" target="_blank">#divorce</a>
             <a class="button small-button tertiary-button" href="https://join.slack.com/friendsanonymous/shared_invite/MjA2MTUyMjIyOTE1LTE0OTg4MjYxMDctMGU2OTQzZDE5MA" target="_blank">and so many more...</a>
