fixed a typo on index

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
                 <svg class="pulse-dot" height="8" width="8"><circle cx="4" cy="4" r="4"/></svg>
             </div>
             <h1>About</h1>
-            <p>Hey, I’m Derek — a designer exploring the foundation and boundries of human-machine experiential interaction. I focus on designing for accessibility and inclusivity.</p>
+            <p>Hey, I’m Derek — a designer exploring the foundation and boundaries of human-machine experiential interaction. I focus on designing for accessibility and inclusivity.</p>
             <p>I’m also interested in what pure story-telling looks like through still and motion photography, as well as musical composition.</p>
             <p>When I’m not desiging, I’m likely traveling with my wife, finding good food or enjoying silence in nature. Oh and being a doggy dad to our rescue pug, Peggy.</p>
         </div>
